yamls/voyager/deployment_release-name-voyager-webhook-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: voyager
    app.kubernetes.io/version: v14.1.0
    helm.sh/chart: voyager-v2022.01.10
  name: RELEASE-NAME-voyager-webhook-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: RELEASE-NAME
      app.kubernetes.io/name: voyager
      voyager.appscode.com/component: webhook-server
  template:
    metadata:
      annotations:
        checksum/apiregistration.yaml: ec59910b62ca3b8da5fcd0175f7199c5b5b075bd66432ec2223d287704f9c7a9
      labels:
        app.kubernetes.io/instance: RELEASE-NAME
        app.kubernetes.io/name: voyager
        voyager.appscode.com/component: webhook-server
    spec:
      containers:
      - args:
        - run
        - --cloud-provider=
        - --v=3
        - --secure-port=8443
        - --audit-log-path=-
        - --authorization-always-allow-paths=/healthz,/readyz,/livez,/convert
        - --tls-cert-file=/var/serving-cert/tls.crt
        - --tls-private-key-file=/var/serving-cert/tls.key
        - --bypass-validating-webhook-xray=false
        - --use-kubeapiserver-fqdn-for-aks=true
        image: appscode/voyager:v14.1.0
        imagePullPolicy: IfNotPresent
        name: operator
        ports:
        - containerPort: 8443
        - containerPort: 56791
        resources: {}
        securityContext: {}
        volumeMounts:
        - mountPath: /var/serving-cert
          name: serving-cert
      nodeSelector:
        beta.kubernetes.io/os: linux
      securityContext:
        fsGroup: 65535
      serviceAccountName: RELEASE-NAME-voyager
      volumes:
      - name: serving-cert
        secret:
          defaultMode: 420
          secretName: RELEASE-NAME-voyager-apiserver-cert
