yamls/voyager/service_release-name-voyager-webhook-server.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: voyager
    app.kubernetes.io/version: v14.1.0
    helm.sh/chart: voyager-v2022.01.10
    voyager.appscode.com/component: webhook-server
  name: RELEASE-NAME-voyager-webhook-server
  namespace: default
spec:
  ports:
  - name: admission
    port: 443
    targetPort: 8443
  - name: acme
    port: 56791
    targetPort: 56791
  selector:
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/name: voyager
    voyager.appscode.com/component: webhook-server
